--- a/ads-front/package.json
+++ b/ads-front/package.json
@@ -9,6 +9,7 @@
     "prettier": "prettier --write \"src/**/*.{js,vue}\""
   },
   "dependencies": {
+    "apexcharts": "^3.39.0",
     "axios": "^1.3.6",
     "chart.js": "^4.2.1",
     "flowbite": "^1.6.5",
