--- a/ads-front/package.json
+++ b/ads-front/package.json
@@ -12,6 +12,7 @@
     "apexcharts": "^3.39.0",
     "axios": "^1.3.6",
     "chart.js": "^4.2.1",
+    "date-fns": "^2.30.0",
     "flowbite": "^1.6.5",
     "primevue": "^3.27.0",
     "tw-elements": "^1.0.0-beta2",
