--- a/ads-front/package.json
+++ b/ads-front/package.json
@@ -9,7 +9,7 @@
     "prettier": "prettier --write \"src/**/*.{js,vue}\""
   },
   "dependencies": {
-    "apexcharts": "^3.39.0",
+    "apexcharts": "^3.40.0",
     "axios": "^1.3.6",
     "chart.js": "^4.2.1",
     "date-fns": "^2.30.0",
@@ -17,8 +17,10 @@
     "primevue": "^3.27.0",
     "tw-elements": "^1.0.0-beta2",
     "vue": "^3.2.47",
+    "vue-apexcharts": "^1.6.2",
     "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.6",
+    "vue3-apexcharts": "^1.4.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
