--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "bezkoder",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.7.3",
