--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "config": "^3.3.9",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "^4.17.1",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.1"
