--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "express": "^4.17.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
+    "openai": "^3.2.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.21.1"
+    "sequelize": "^6.21.1",
+    "vue3-spinner": "^0.0.17"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
